<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/connect"
    tools:context=".ConnectActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="209dp"
        android:layout_height="75dp"
        android:text="@string/enterIPText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputEditText"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:hint="@string/EnterIpBox"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.13" />

    <ImageView
        android:id="@+id/purpBarBackground"
        android:layout_width="421dp"
        android:layout_height="110dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/purpleBackground"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/purpbackground" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="95dp"
        android:layout_height="77dp"
        android:background="@null"
        android:contentDescription="@string/settinIcon"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        app:srcCompat="@drawable/settingactivityicon" />


    <ImageButton
        android:id="@+id/mainButton"
        android:layout_width="95dp"
        android:layout_height="77dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:contentDescription="@string/mainIcon"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settingsButton"
        app:srcCompat="@drawable/mainactivityicon" />

    <ImageButton
        android:id="@+id/connectButton"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginBottom="24dp"
        android:background="@null"
        android:contentDescription="@string/connectIcon"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toEndOf="@+id/mainButton"
        app:srcCompat="@drawable/connectactivityicon" />
</androidx.constraintlayout.widget.ConstraintLayout>